Making a deployable jar file of the project
Delete App.java and replace with two new mains, ApiServer and Cli java source files

Rename the main function inside of DatabaseInit.java into a new static function

Example of a working frontend comming with backend via javalin json endpoints

instance of actually using ClassEntity.java

added a print to direct open website

Added a barebone Cli.java to call skeletons functions from service objects

Incomplete teacher service

Implement teacher management features in CLI and service layers

added a JVM JDBC suppressor for sqlite

Refactor API server to manage teacher records and update HTML interface for teacher operations